Milestone: persistent query for n-number working from wicket form.

--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -13,6 +13,11 @@
             <div>
                 <div style="margin-top: 20px; padding-left: 15px;">
                     <h2 style="color:#333333; white-space: nowrap;">Please Sign Our Guest List</h2>
+                    <wicket:link>                                              
+                        <ul>
+                            <li><a href="NnumberPage.html">Select N Number</a></li>        
+                        </ul>
+                    </wicket:link>
                     <div wicket:id="feedback"></div>
                     <form wicket:id="record_form">
                         <label>First Name:
