Checkpoint, building record

--- a/src/java/com/fdorigo/rmfly/wicket/NnumberPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/NnumberPage.html
@@ -19,6 +19,10 @@
                     <input type="submit"/>
                 </form>
             </div>
+            
+            <div wicket:id="selectedRecord"> 
+                
+            </div>
 
             <hr style="background-color: #E9601A; color: #E9601A; height: 1px; margin-top: 20px;"/>
             <div wicket:id="recordList" style="white-space: nowrap;">
