Checkpoint, building record

--- a/src/java/com/fdorigo/rmfly/wicket/FooterPanel.html
+++ b/src/java/com/fdorigo/rmfly/wicket/FooterPanel.html
@@ -6,7 +6,9 @@
     </head> 
     <body>
         <wicket:panel>
-            <span wicket:id="footerpanel_text">This gets replaced</span>
+            <div class="pure-g">
+                <div style="border-top: solid 1px #eee; color: #C6C6C6; padding-top: 20px; text-align: center;" class="pure-u-1-1" wicket:id="footerpanel_text">This gets replaced</div>
+            </div>
         </wicket:panel>
     </body>
 </html>
