--- a/src/java/com/fdorigo/rmfly/wicket/BasePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/BasePage.html
@@ -2,18 +2,32 @@
 <html xmlns:wicket="http://wicket.apache.org">
     <head> 
         <wicket:head> 
-            <link rel="stylesheet" type="text/css" href="css/style.css"/>
+            <link rel="stylesheet" type="text/css" href="css/base-min.css"/>
             <link rel="stylesheet" type="text/css" href="css/pure-min.css"/>
             <link rel="stylesheet" type="text/css" href="css/grids-responsive-min.css"/>
+            <link rel="stylesheet" type="text/css" href="css/layout/side-menu.css"/>
             <link rel="stylesheet" type="text/css" href="css/fa/css/font-awesome.min.css" />
+            <link rel="stylesheet" type="text/css" href="css/style.css"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"/>        
         </wicket:head> 
     </head> 
     <body> 
-        <header wicket:id="headerpanel" />
-        <section class="content_container"> 
-            <wicket:child/> 
-        </section> 
-        <footer wicket:id="footerpanel" /> 
+        <div id="layout">
+            <div wicket:id="mainNavigation" id="navigationPanel">
+                navigation links
+            </div>
+
+            <div id="main">
+                <header wicket:id="headerpanel" />
+
+                <div class="content"> 
+                    <wicket:child/> 
+                </div>
+                
+                <footer wicket:id="footerpanel" /> 
+            </div>
+        </div>
+
+        <script src="js/ui.js"></script>
     </body> 
 </html>
