--- a/src/java/com/fdorigo/rmfly/wicket/HeaderPanel.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HeaderPanel.html
@@ -5,10 +5,10 @@
     <head><title>Wicket Example</title></head>
     <body>
         <wicket:panel>
-            <h1>Wicket Example</h1>
-            <p id="titleblock">
-                <b><font size="+1">Start of <span wicket:id="exampleTitle">Example Title Goes Here</span></font></b>
-            </p>
+            <div class="header">
+                <h1>2015 Rocky Mountain Fly-in Airshow</h1>
+                <h2><span wicket:id="exampleTitle">Example Title Goes Here</span></h2>
+            </div>
         </wicket:panel>
     </body>
 </html>
