--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -5,44 +5,52 @@
 
     <head> 
         <wicket:head> 
-            <title>Wicket Example</title> 
+            <title>Rocky Mountain Fly-in Airshow, August 2015</title> 
         </wicket:head> 
     </head> 
     <body> 
         <wicket:extend>
-            <div>
-                <div style="margin-top: 20px; padding-left: 15px;">
-                    <h2 style="color:#333333; white-space: nowrap;">Please Sign Our Guest List</h2>
-                    <wicket:link>                                              
-                        <ul>
-                            <li><a href="NnumberPage.html">Select N Number</a></li>        
-                        </ul>
-                    </wicket:link>
-                    <div wicket:id="feedback"></div>
-                    <form wicket:id="record_form">
-                        <label>First Name:
-                            <span wicket:id="firstNameBorder">
-                                <input wicket:id="firstName" type="text"/>
-                            </span>
-                        </label>
-                        <br/>
-                        <label>Last Name:
-                            <span wicket:id="lastNameBorder">
-                                <input wicket:id="lastName" type="text"/>
-                            </span>
-                        </label>
-                        <br/>
-                        <input type="submit"/><input type="reset"/>
-                    </form>
-                </div>
-                <hr style="background-color: #E9601A; color: #E9601A; height: 1px; margin-top: 20px;"/>
-                <div style="margin-top: 20px; padding-left: 15px;">
-                    <h2 style="color:#333333; white-space: nowrap;">Visitors Who Have Signed Our Guest List</h2>
-                    <div wicket:id="recordlist" style="white-space: nowrap;">
-                        <span wicket:id="name" style="font-size: 1.2em; color: #333333;">name</span>
-                    </div>
-                </div>
-            </div>
+            <!--            <div>
+                            <div style="margin-top: 20px; padding-left: 15px;">
+                                <h2 style="color:#333333; white-space: nowrap;">Please Sign Our Guest List</h2>
+                                <div wicket:id="feedback"></div>
+                                <form wicket:id="record_form">
+                                    <label>First Name:
+                                        <span wicket:id="firstNameBorder">
+                                            <input wicket:id="firstName" type="text"/>
+                                        </span>
+                                    </label>
+                                    <br/>
+                                    <label>Last Name:
+                                        <span wicket:id="lastNameBorder">
+                                            <input wicket:id="lastName" type="text"/>
+                                        </span>
+                                    </label>
+                                    <br/>
+                                    <input type="submit"/><input type="reset"/>
+                                </form>
+                            </div>
+            
+                            <hr style="background-color: #E9601A; color: #E9601A; height: 1px; margin-top: 20px;"/>
+            </div>-->
+
+            <h2 class="content-subhead">Registered Participants</h2>
+            <table class="pure-table">
+                <thead>
+                    <tr>
+                        <th>N Number</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr wicket:id="recordlist">
+                        <td><a wicket:id="pageLinkWithArgs"><span wicket:id="nnumber">nnumber</span></a></td>
+                        <td><span wicket:id="firstName">firstName</span></td>
+                        <td><span wicket:id="lastName">lastName</span></td>
+                    </tr>
+                </tbody>
+            </table>
         </wicket:extend> 
     </body> 
 </html>
