--- a/src/java/com/fdorigo/rmfly/wicket/NavigationPanel.html
+++ b/src/java/com/fdorigo/rmfly/wicket/NavigationPanel.html
@@ -20,6 +20,7 @@
                         <li class="pure-menu-item"><a href="#" class="pure-menu-link" wicket:id="home">Home</a></li>
                         <li class="pure-menu-item"><a href="#" class="pure-menu-link" wicket:id="search_nnumber">Lookup N-Number</a></li>
                         <li class="pure-menu-item"><a href="#" class="pure-menu-link" wicket:id="register_participant">Register Participant</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" wicket:id="judge_airplane">Add Score</a></li>
                     </ul>
                 </div>
             </div>
