--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -10,30 +10,6 @@
     </head> 
     <body> 
         <wicket:extend>
-            <!--            <div>
-                            <div style="margin-top: 20px; padding-left: 15px;">
-                                <h2 style="color:#333333; white-space: nowrap;">Please Sign Our Guest List</h2>
-                                <div wicket:id="feedback"></div>
-                                <form wicket:id="record_form">
-                                    <label>First Name:
-                                        <span wicket:id="firstNameBorder">
-                                            <input wicket:id="firstName" type="text"/>
-                                        </span>
-                                    </label>
-                                    <br/>
-                                    <label>Last Name:
-                                        <span wicket:id="lastNameBorder">
-                                            <input wicket:id="lastName" type="text"/>
-                                        </span>
-                                    </label>
-                                    <br/>
-                                    <input type="submit"/><input type="reset"/>
-                                </form>
-                            </div>
-            
-                            <hr style="background-color: #E9601A; color: #E9601A; height: 1px; margin-top: 20px;"/>
-            </div>-->
-
             <h2 class="content-subhead">Registered Participants</h2>
             <table class="pure-table">
                 <thead>
@@ -41,6 +17,9 @@
                         <th>N Number</th>
                         <th>First Name</th>
                         <th>Last Name</th>
+                        <th>Need Score</th>
+                        <th>Add Score</th>
+                        <th>Number of scores</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -48,6 +27,9 @@
                         <td><a wicket:id="pageLinkWithArgs"><span wicket:id="nnumber">nnumber</span></a></td>
                         <td><span wicket:id="firstName">firstName</span></td>
                         <td><span wicket:id="lastName">lastName</span></td>
+                        <td><span wicket:id="competing">score</span></td>
+                        <td><a wicket:id="scoreLinkWithArgs"><span wicket:id="score">score</span></a></td>
+                        <td><span wicket:id="judged">score</span></td>
                     </tr>
                 </tbody>
             </table>
