--- a/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
@@ -14,25 +14,26 @@
 
                     <div class="pure-g">
 
-                        <div class="pure-u-1 pure-u-md-1-3">
+                        <div class="pure-u-1 pure-u-md-1-4">
                             <label>NNumber</label>
-                            <input wicket:id="nnumber" type="text" class="pure-u-23-24" />
+                            <input wicket:id="nnumber" type="text" class="pure-u-21-24" />
                         </div>
 
-                        <div class="pure-u-1 pure-u-md-1-3">
+                        <div class="pure-u-1 pure-u-md-1-4">
                             <label>Arrival Date</label>
-                            <span wicket:id="arrivalDateBorder">
-                                <input wicket:id="arrivalDate" type="text" class="pure-u-11-24"/>
-                            </span>
+                            <input wicket:id="arrivalDate" type="text" class="pure-u-21-24"/>
                         </div>
 
-                        <div class="pure-u-1 pure-u-md-1-3">
+                        <div class="pure-u-1 pure-u-md-1-4">
+                            <label>Category</label>
+                            <select wicket:id="category"class="pure-u-21-24"/>
+                        </div>
+
+                        <div class="pure-u-1 pure-u-md-1-4">
                             <label style="margin-bottom: 12px;">Need Judging</label>
-                            <span wicket:id="needJudgingBorder">
-                                <span wicket:id="needJudging" id="needJudgingRadioChoice">
-                                    <span wicket:id="radios">
-                                        <input type="radio" wicket:id="radio" /><label wicket:id="boolval"  style="display:inline; padding: 0 20px 0 10px;"></label>
-                                    </span>
+                            <span wicket:id="needJudging" id="needJudgingRadioChoice">
+                                <span wicket:id="radios">
+                                    <input type="radio" wicket:id="radio" /><label wicket:id="boolval"  style="display:inline; padding: 0 20px 0 10px;"></label>
                                 </span>
                             </span>
                         </div>
@@ -49,10 +50,7 @@
 
                         <div class="pure-u-1 pure-u-md-1-3">
                             <label>Primary Phone (while at the show)</label>
-                            <span wicket:id="primaryPhoneBorder">
-                                <input wicket:id="primaryPhone" type="text" class="pure-u-23-24"/>
-                            </span>
-
+                            <input wicket:id="primaryPhone" type="text" class="pure-u-23-24"/>
                         </div>
 
                         <div class="pure-u-1 pure-u-md-1-3">
@@ -99,7 +97,7 @@
                             <label>Manufacture Year</label>
                             <input wicket:id="manufactureYear" name="manufactureYear" type="text" class="pure-u-23-24"/>
                         </div>
-
+                        
                         <div class="pure-u-1 pure-u-md-1-3">
                             &nbsp;
                         </div>
