--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -10,7 +10,7 @@
     </head> 
     <body> 
         <wicket:extend>
-            <h2 class="content-subhead">Registered Participants</h2>
+            <h2 class="content-subhead">Registered Participants <span wicket:id="totalRegistered" /></h2>
             <table class="pure-table">
                 <thead>
                     <tr>
