--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -10,7 +10,10 @@
     </head> 
     <body> 
         <wicket:extend>
-            <h2 class="content-subhead">Registered Participants <span wicket:id="totalRegistered" /></h2>
+            <h2 class="content-subhead">
+                Registered Participants: <span wicket:id="totalRegistered" />
+                <br />Competing: <span wicket:id="totalCompeting" />
+            </h2>
             <table class="pure-table">
                 <thead>
                     <tr>
