Added javascript for phone number formatting

--- a/src/java/com/fdorigo/rmfly/wicket/BasePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/BasePage.html
@@ -8,6 +8,7 @@
             <link rel="stylesheet" type="text/css" href="css/layout/side-menu.css"/>
             <link rel="stylesheet" type="text/css" href="css/fa/css/font-awesome.min.css" />
             <link rel="stylesheet" type="text/css" href="css/style.css"/>
+            <script type="text/javascript" src="js/airshow-telephone.js"></script>
             <meta name="viewport" content="width=device-width, initial-scale=1"/>        
         </wicket:head> 
     </head> 
