--- a/src/java/com/fdorigo/rmfly/wicket/ViewScorePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/ViewScorePage.html
@@ -14,7 +14,7 @@
                 Category: <span wicket:id="category" />
                 Total Scores: <span wicket:id="totalScored" />
             </h2>
-            <table class="pure-table">
+            <table class="pure-table" style="margin-left: -100px;">
                 <thead>
                     <tr>
                         <th>Overall</th>
@@ -44,7 +44,7 @@
                         <td><span wicket:id="judge">overall</span></td>
                         <td><span wicket:id="date">date</span></td>
                     </tr>
-                    
+
                     <tr style="color:blue;">
                         <td><span wicket:id="avgoverall">overall</span></td>
                         <td><span wicket:id="avgfuselage">overall</span></td>
@@ -58,7 +58,7 @@
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
-                        
+
                 </tbody>
             </table>
         </wicket:extend> 
