Added judge EJB facade and DropDownChoice.

--- a/src/java/com/fdorigo/rmfly/wicket/ScorePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/ScorePage.html
@@ -36,7 +36,9 @@
 
                         <div class="pure-u-2-3">
                             <label>Judge Name</label>
-                            <input wicket:id="judgeName" type="text" class="pure-u-21-24" />
+                            <select wicket:id="judgeName"class="pure-u-21-24"> 
+                                <option>Some option</option>
+                            </select>
                         </div>
 
 
