--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -14,6 +14,7 @@
                 Registered Participants: <span wicket:id="totalRegistered" />
                 <br />Competing: <span wicket:id="totalCompeting" />
             </h2>
+            <span wicket:id="pagingNavigator"></span>
             <table class="pure-table">
                 <thead>
                     <tr>
