--- a/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
@@ -50,12 +50,12 @@
 
                         <div class="pure-u-1 pure-u-md-1-3">
                             <label>Primary Phone (while at the show)</label>
-                            <input wicket:id="primaryPhone" type="text" class="pure-u-23-24"/>
+                            <input wicket:id="primaryPhone" type="text" class="pure-u-23-24" onkeydown="javascript:backspacerDOWN(this, event);" onkeyup="javascript:backspacerUP(this, event);" />
                         </div>
 
                         <div class="pure-u-1 pure-u-md-1-3">
                             <label>Home Phone</label>
-                            <input wicket:id="secondaryPhone" type="text" class="pure-u-23-24"/>
+                            <input wicket:id="secondaryPhone" type="text" class="pure-u-23-24" />
                         </div>
 
                         <div class="pure-u-1 pure-u-md-1-3">
@@ -97,7 +97,7 @@
                             <label>Manufacture Year</label>
                             <input wicket:id="manufactureYear" name="manufactureYear" type="text" class="pure-u-23-24"/>
                         </div>
-                        
+
                         <div class="pure-u-1 pure-u-md-1-3">
                             &nbsp;
                         </div>
