--- a/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
@@ -13,6 +13,34 @@
                     <legend><wicket:message key="form-label" /></legend>
 
                     <div class="pure-g">
+                        <style>
+                            .button-success,
+                            .button-error,
+                            .button-warning,
+                            .button-secondary {
+                                margin-top: 20px;
+                                color: white;
+                                border-radius: 4px;
+                                text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+                            }
+
+                            .button-success {
+                                background: rgb(28, 184, 65); /* this is a green */
+                            }
+
+                            .button-error {
+                                background: rgb(202, 60, 60); /* this is a maroon */
+                            }
+
+                            .button-warning {
+                                background: rgb(223, 117, 20); /* this is an orange */
+                            }
+
+                            .button-secondary {
+                                background: rgb(66, 184, 221); /* this is a light blue */
+                            }
+
+                        </style>
 
                         <div class="pure-u-1 pure-u-md-1-4">
                             <label>NNumber</label>
@@ -99,12 +127,15 @@
                         </div>
 
                         <div class="pure-u-1 pure-u-md-1-3">
-                            &nbsp;
-                        </div>
-                        <div class="pure-u-1 pure-u-md-1-3">
-                            <button type="submit" class="pure-button pure-button-primary" style=" margin-top: 30px; margin-left: 28px;">
+                            <button wicket:id="save" type="submit" class="button-success pure-button">
                                 <i class="fa fa-floppy-o"></i>
                                 Register Participant
+                            </button>
+                        </div>
+                        <div class="pure-u-1 pure-u-md-1-3">
+                            <button wicket:id="delete" type="submit" class="button-error pure-button">
+                                <i class="fa fa-times"></i>
+                                Delete Record
                             </button>
                         </div>
                     </div>
