--- a/src/java/com/fdorigo/rmfly/wicket/NnumberPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/NnumberPage.html
@@ -11,7 +11,7 @@
             <form wicket:id="nNumberForm" class="pure-form">
                 <legend>Lookup records by NNumber</legend>
                 <input wicket:id="nNumber" type="text"  placeholder="Enter NNumber"/>
-                <button type="submit" class="pure-button pure-button-primary">Search </button>
+                <button type="submit" class="pure-button pure-button-primary">Continue</button>
             </form>
         </wicket:extend>
     </body>
