--- a/src/java/com/fdorigo/rmfly/wicket/CompetingPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/CompetingPage.html
@@ -18,6 +18,7 @@
                 <thead>
                     <tr>
                         <th>N Number</th>
+                        <th>Category</th>
                         <th>Owner Name</th>
                         <th>Add Score</th>
                         <th>Number of scores</th>
@@ -27,6 +28,7 @@
                 <tbody>
                     <tr wicket:id="recordlist">
                         <td><a wicket:id="pageLinkWithArgs"><span wicket:id="nnumber">nnumber</span></a></td>
+                        <td><span wicket:id="category">Category</span></td>
                         <td><span wicket:id="ownerName">Owner Name</span></td>
                         <td><a wicket:id="scoreLinkWithArgs"><span wicket:id="score">Score</span></a></td>
                         <td><span wicket:id="judged">score</span></td>
