--- a/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
@@ -132,11 +132,13 @@
                                 Register Participant
                             </button>
                         </div>
-                        <div class="pure-u-1 pure-u-md-1-3">
-                            <button wicket:id="delete" type="submit" class="button-error pure-button">
-                                <i class="fa fa-times"></i>
-                                Delete Record
-                            </button>
+                        <div class="pure-u-1 pure-u-md-2-3">
+                            <span>
+                                <button wicket:id="delete" type="submit" class="button-error pure-button" style="margin-left: 370px;">
+                                    <i class="fa fa-times"></i>
+                                    Delete Record
+                                </button>
+                            </span>
                         </div>
                     </div>
                 </fieldset>
