--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -21,9 +21,9 @@
                         <th>N Number</th>
                         <th>First Name</th>
                         <th>Last Name</th>
-                        <th>Need Score</th>
+                        <th>Competing</th>
+                        <th>Scores</th>
                         <th>Add Score</th>
-                        <th>Number of scores</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -32,8 +32,8 @@
                         <td><span wicket:id="firstName">firstName</span></td>
                         <td><span wicket:id="lastName">lastName</span></td>
                         <td><span wicket:id="competing">score</span></td>
-                        <td><a wicket:id="scoreLinkWithArgs"><span wicket:id="score">score</span></a></td>
                         <td><span wicket:id="judged">score</span></td>
+                        <td><a wicket:id="scoreLinkWithArgs"><span wicket:id="score">score</span></a></td>
                     </tr>
                 </tbody>
             </table>
