--- a/src/java/com/fdorigo/rmfly/wicket/HomePage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/HomePage.html
@@ -21,8 +21,8 @@
                         <th>N Number</th>
                         <th>First Name</th>
                         <th>Last Name</th>
+                        <th>Phone</th>
                         <th>Competing</th>
-                        <th>Scores</th>
                         <th>Add Score</th>
                     </tr>
                 </thead>
@@ -31,8 +31,8 @@
                         <td><a wicket:id="pageLinkWithArgs"><span wicket:id="nnumber">nnumber</span></a></td>
                         <td><span wicket:id="firstName">firstName</span></td>
                         <td><span wicket:id="lastName">lastName</span></td>
+                        <td><span wicket:id="phoneNumber">phoneNumber</span></td>
                         <td><span wicket:id="competing">score</span></td>
-                        <td><span wicket:id="judged">score</span></td>
                         <td><a wicket:id="scoreLinkWithArgs"><span wicket:id="score">score</span></a></td>
                     </tr>
                 </tbody>
