--- a/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/RecordPage.html
@@ -77,7 +77,7 @@
                         </div>
 
                         <div class="pure-u-1 pure-u-md-1-3">
-                            <label>Primary Phone (while at the show)</label>
+                            <label>Primary Phone (at show)</label>
                             <input wicket:id="primaryPhone" type="text" class="pure-u-23-24" onkeydown="javascript:backspacerDOWN(this, event);" onkeyup="javascript:backspacerUP(this, event);" />
                         </div>
 
@@ -123,7 +123,7 @@
 
                         <div class="pure-u-1 pure-u-md-1-3">
                             <label>Manufacture Year</label>
-                            <input wicket:id="manufactureYear" name="manufactureYear" type="text" class="pure-u-23-24"/>
+                            <input wicket:id="manufactureYear" name="manufactureYear" type="number" class="pure-u-23-24"/>
                         </div>
 
                         <div class="pure-u-1 pure-u-md-1-3">
