Changes to layout and result pages

--- a/src/java/com/fdorigo/rmfly/wicket/CategoryResultPanel.html
+++ b/src/java/com/fdorigo/rmfly/wicket/CategoryResultPanel.html
@@ -8,7 +8,6 @@
         <thead>
             <tr>
                 <th>N-Num</th>
-                <th>Overall</th>
                 <th>Fuselage</th>
                 <th>Lift</th>
                 <th>Pitch</th>
@@ -17,13 +16,13 @@
                 <th>Power</th>
                 <th>Finish</th>
                 <th>Innovation</th>
+                <th>Overall</th>
                 <th>Total</th>
             </tr>
         </thead>
         <tbody>
             <tr wicket:id="scorelist">
-                <td><span wicket:id="nnumber">n number</span></td>
-                <td><span wicket:id="overall">overall</span></td>
+                <td><a wicket:id="pageLinkWithArgs"><span wicket:id="nnumber">nnumber</span></a></td>
                 <td><span wicket:id="fuselage">overall</span></td>
                 <td><span wicket:id="lift">overall</span></td>
                 <td><span wicket:id="pitch">overall</span></td>
@@ -32,6 +31,7 @@
                 <td><span wicket:id="power">overall</span></td>
                 <td><span wicket:id="finish">overall</span></td>
                 <td><span wicket:id="innovation">overall</span></td>
+                <td><span wicket:id="overall">overall</span></td>
                 <td><span wicket:id="total">overall</span></td>
             </tr>
         </tbody>
