--- a/src/java/com/fdorigo/rmfly/wicket/CompetitionResultsPage.html
+++ b/src/java/com/fdorigo/rmfly/wicket/CompetitionResultsPage.html
@@ -11,7 +11,12 @@
     <body> 
         <wicket:extend>
             <span wicket:id="all_results"> [Results] </span>
-            <span wicket:id="homekit_results"> [Results] </span>
+            <span wicket:id="cat_modern"> [Results] </span>
+            <span wicket:id="cat_home_kit"> [Results] </span>
+            <span wicket:id="cat_home_plan"> [Results] </span>
+            <span wicket:id="cat_light_sport"> [Results] </span>
+            <span wicket:id="cat_vintage"> [Results] </span>
+            <span wicket:id="cat_warbird"> [Results] </span>
         </wicket:extend>
     </body> 
 </html>
